--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,5 +48,20 @@
         android:text="Do you drink coffee?"
         android:id="@+id/myRadio" />
 
+    <ImageView
+        android:src="@drawable/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/myImgv"
+        android:layout_marginBottom="30dp"/>
+
+
+    <ImageButton
+        android:src="@drawable/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/myImgb" />
+
+
 
 </LinearLayout>
