created tv version of the app

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="my_primary">#750F0F</color>
-    <color name="my_secondary">#FAE002</color>
-    <color name="my_statusbar">#02EC0C</color>
-    <color name="my_text">#008BFA</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="my_primary">#EF9B9B</color>
+    <color name="my_secondary">#0078D8</color>
+    <color name="my_statusbar">#000000</color>
+    <color name="my_text">#F1F9FF</color>
+    <color name="black">#514C4C</color>
+    <color name="white">#E91E63</color>
 </resources>
