--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,9 +3,9 @@
     <style name="Base.Theme.MohamedAttiaAndroidLabs" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/my_primary</item>
-        <item name="colorSecondary">@color/my_secondary</item>
+        <item name="colorSecondary">#F3F5F6</item>
         <item name="android:statusBarColor">@color/my_statusbar</item>
-        <item name="android:textColor">@color/my_text</item>
+        <item name="android:textColor">#0E82D8</item>
     </style>
 
     <style name="Theme.MohamedAttiaAndroidLabs" parent="Base.Theme.MohamedAttiaAndroidLabs" />
