--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="my_statusbar">#000000</color>
     <color name="my_text">#F1F9FF</color>
     <color name="black">#514C4C</color>
-    <color name="white">#E91E63</color>
+    <color name="white">#FFFFFF</color>
 </resources>
