--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MohamedAttiaAndroidLabs" parent="Theme.Material3.DayNight">
+    <style name="Base.Theme.MohamedAttiaAndroidLabs" parent="Theme.Material3.Dark">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/my_primary</item>
         <item name="colorSecondary">#F3F5F6</item>
