--- a/app/src/main/res/layout/receive_row.xml
+++ b/app/src/main/res/layout/receive_row.xml
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="message_text"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/image"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="time_text"
         android:textSize="11sp"
         app:layout_constraintEnd_toStartOf="@+id/message"
         app:layout_constraintTop_toTopOf="@+id/message" />
@@ -31,7 +29,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
