--- a/app/src/main/res/layout/receive_row.xml
+++ b/app/src/main/res/layout/receive_row.xml
@@ -29,6 +29,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
