--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,16 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MohamedAttiaAndroidLabs" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
+        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/my_primary</item>
+
+        <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/my_secondary</item>
+
+        <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/my_statusbar</item>
+
+        <!-- Text color. -->
         <item name="android:textColor">@color/my_text</item>
     </style>
 
