--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="my_primary">#750F0F</color>
-    <color name="my_secondary">#FAE002</color>
-    <color name="my_statusbar">#02EC0C</color>
-    <color name="my_text">#008BFA</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="my_primary">#1A6071</color>
+    <color name="my_secondary">#05364C</color>
+    <color name="my_statusbar">#027050</color>
+    <color name="my_text">#4D0C5C</color>
 </resources>
